fix(style): clip the overflown margin for radio/checkbox groups

--- a/packages/veui-theme-dls/components/checkbox-group.less
+++ b/packages/veui-theme-dls/components/checkbox-group.less
@@ -2,6 +2,7 @@
 
 .@{veui-prefix}-checkbox-group {
   @dls-checkbox-group-row-gap: @dls-padding-unit * 2;
+  overflow: hidden;
 
   &-items {
     display: flex;
