--- a/packages/veui-theme-dls/components/radio-group.less
+++ b/packages/veui-theme-dls/components/radio-group.less
@@ -2,6 +2,7 @@
 
 .@{veui-prefix}-radio-group {
   @dls-radio-group-row-gap: @dls-padding-unit * 2;
+  overflow: hidden;
 
   &-items {
     display: flex;
